# practical-course-information-systems

./: .gitignore  README.md
.devcontainer/: devcontainer.json
cv-priv-app/: docker-compose.yml
cv-priv-app/backend/: Dockerfile  pyproject.toml
cv-priv-app/backend/src/: app.py
cv-priv-app/backend/src/offline_lib/: offline_app.py
cv-priv-app/backend/src/offline_lib/ttl_files/: PrivacyContextModel-Turtle.ttl
cv-priv-app/backend/src/utils/: json_util.py
cv-priv-app/frontend/: Dockerfile  package.json
cv-priv-app/frontend/public/: index.html  manifest.json
cv-priv-app/frontend/src/: App.tsx
cv-priv-app/frontend/src/components/: BackButton.tsx  NextButton.tsx
cv-priv-app/frontend/src/pages/: EntitiesPage.tsx  PETResultPage.tsx  RelatedDataPage.tsx
cv-priv-app/frontend/src/themes/: darkTheme.ts  lightTheme.ts
cv-priv-app/frontend/src/utils/: friendlyName.ts  processRelatedData.ts  sliceURI.ts
models/: PrivacyContextModel-OWL-XML.owl  PrivacyContextModel-OWL-XML.properties  PrivacyContextModel-RDF-XML.owl  PrivacyContextModel-RDF-XML.properties  PrivacyContextModel-Turtle.properties  PrivacyContextModel-Turtle.ttl  PrivacyContextModel.properties  PrivacyContextModel.ttl
models-old/: PrivacyContextModelOWLXML.owl  PrivacyContextModelRDFXML.owl  PrivacyContextModelTurtle.owl
orga/: Beispiele.pptx  BeispieleVersion2.pptx
test/: TestModel.owl
